# HEMat

./: BGV_matrix_new.cpp  CMakeLists.txt  README.md  matrix_new.cpp  matrix_new.h
bases/: M_size.txt  M_size_depth_3.txt  M_size_depth_4.txt  M_size_short_int.txt  Size_depth_3.txt  combination_coeffs_depth_3.txt  combination_coeffs_short_int.txt  combination_size_depth_3.txt  combination_size_depth_4.txt  combination_size_short_int.txt  decoding_coeffs_depth_3.txt  decoding_coeffs_depth_4.txt  decoding_combination_depth_3.txt  decoding_combination_short_int.txt  decoding_degree.txt  decoding_degree_depth_4.txt  uv_coeffs_depth_4.txt  uv_deg_depth_4.txt  uv_size_depth_4.txt  vdw_coeffs_depth_4.txt  vdw_coeffs_short_int.txt  vdw_degree.txt  vdw_degree_depth_4.txt  vdw_degree_short_int.txt  wdud_coeffs_depth_4.txt  wdud_degree_depth_4.txt
input/: A_16.txt  A_16_int.txt  A_32.txt  A_32_int.txt  A_64.txt  A_64_int.txt  B_16.txt  B_16_int.txt  B_32.txt  B_32_int.txt  B_64.txt  B_64_int.txt  M1_64.txt  M2_16.txt
